src/objects/LeanData__Matched_View_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores settings for Matched Views</description>
    <fields>
        <fullName>LeanData__A2BLead_Columns1__c</fullName>
        <label>A2BLead Columns1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__A2BLead_Columns2__c</fullName>
        <label>A2BLead Columns2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__A2BLead_Columns3__c</fullName>
        <label>A2BLead Columns3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__A2BSummary_Columns1__c</fullName>
        <label>A2BSummary Columns1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__A2BSummary_Columns2__c</fullName>
        <label>A2BSummary Columns2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__A2BSummary_Columns3__c</fullName>
        <label>A2BSummary Columns3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__A2B_Columns1__c</fullName>
        <label>A2B Columns1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__A2B_Columns2__c</fullName>
        <label>A2B Columns2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__A2B_Columns3__c</fullName>
        <label>A2B Columns3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Account_Columns1__c</fullName>
        <label>Account Columns1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Account_Columns2__c</fullName>
        <label>Account Columns2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Account_Columns3__c</fullName>
        <label>Account Columns3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_Columns1__c</fullName>
        <label>Contact Columns1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_Columns2__c</fullName>
        <label>Contact Columns2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_Columns3__c</fullName>
        <label>Contact Columns3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__LeadConvert_Columns1__c</fullName>
        <label>LeadConvert Columns1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__LeadConvert_Columns2__c</fullName>
        <label>LeadConvert Columns2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__LeadConvert_Columns3__c</fullName>
        <label>LeadConvert Columns3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Columns1__c</fullName>
        <label>Lead Columns1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Columns2__c</fullName>
        <label>Lead Columns2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Columns3__c</fullName>
        <label>Lead Columns3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__LogSummary_Columns0__c</fullName>
        <label>LogSummary Columns0</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__LogSummary_Columns1__c</fullName>
        <label>LogSummary Columns1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__LogSummary_Columns2__c</fullName>
        <label>LogSummary Columns2</label>
        <type>TextArea</type>
    </fields>
    <label>Matched View Setting</label>
</CustomObject>